docs : tailwind 선정 이유 작성 및 설치 과정 작성

--- a/docs/구현과정.md
+++ b/docs/구현과정.md
@@ -8,3 +8,39 @@
 - Vite 선정 이유
   - React 프로젝트 설정 방식에는 `Vite`와 `CRA`(`Create React App`) 방식이 존재했다 하지만 CRA 방식은 최근 사용하지 않는다고 하며 Vite를 사용하여 빠르게 웹 개발 시작이 가능하다고 하여 Vite로 선정하였다.
   - `Vite` : 프론트엔드 빌드 도구
+
+### tailwind 설정
+
+- tailwindcss 설치 명령어 : `npm install -D tailwindcss@^3 postcss autoprefixer`
+- `postcss.config.js` 설정하기
+
+  ```js
+  export default {
+    plugins: {
+      tailwindcss: {},
+      autoprefixer: {},
+    },
+  };
+  ```
+
+- `tailwind.config.js` 설정하기
+
+  ```js
+  /** @type {import('tailwindcss').Config} */
+  export default {
+    content: ["./index.html", "./src/**/*.{js,ts,jsx,tsx}"],
+    theme: {
+      extend: {},
+    },
+    plugins: [],
+  };
+  ```
+
+- tailwind 선정이유
+
+  - 기존에는 단순 CSS로만 개발했었는데 이번 기회에 tailwind를 경험해보고 싶은 이유가 가장 컸다.
+  - tailwind를 사용하면 레고 조립하는 느낌으로 작성할 수 있다고 해서 굉장히 흥미로웠다.
+
+- tailwind에서 v3로 낮춘 이유
+  - `npm install -D tailwindcss postcss autoprefixer`를 통해 설치를 진행했는데 설치가 되지 않는 오류가 존재했다.
+  - v3로 다운그레이드 해서 파일을 직접 생성하니 원활히 동작하는 것을 확인했고 이를 토대로 개발하면 좋을 거 같아서 바로 작성하게 되었습니다.
