chore : Zustand 설치

--- a/docs/구현과정.md
+++ b/docs/구현과정.md
@@ -44,3 +44,11 @@
 - tailwind에서 v3로 낮춘 이유
   - `npm install -D tailwindcss postcss autoprefixer`를 통해 설치를 진행했는데 설치가 되지 않는 오류가 존재했다.
   - v3로 다운그레이드 해서 파일을 직접 생성하니 원활히 동작하는 것을 확인했고 이를 토대로 개발하면 좋을 거 같아서 바로 작성하게 되었습니다.
+
+### Zustand 설정
+
+- Zustand 설치 명령어 : `npm install zustand`
+- Zustand 선정 이유
+  - Window의 상태(열고 닫고 최소화 등)를 관리하기 위해서는 상태 관리가 불가피 했다.
+  - 고민해보던 도중에 다양한 라이브러리를 경험해보고자하는 마음으로 Context API나 Props Drilling을 경험하는 대신 Zustand라는 라이브러리 도입을 선택하게 되었고 사용해보게 되었다!
+  - 해당 과정에서 많은 시간이 소비된거 같은데 figma로 컴포넌트 구성을 계속 해서 짜고 수정을 반복했고 이 해결책으로 Zustand를 선정한 것도 이유가 있었다.(원하는 곳에 구독할 수 있다 라는 장점이 매우 컸던거 같다.)
